No longer needed now that there's a backdrop behind the menu

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -1210,7 +1210,6 @@ $wide-width: 1300px;
         top: 58px;
         z-index: 10;
         width: 100vw;
-        box-shadow: 3px 5px 5px #999;
         background: govuk-colour("white");
 
         &-inner {
